syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "LucasNotes.UserService.Protos";
package UserManager;

service UserManager{
	rpc GetUserById (GetUserByIdRequest) returns (UserDto);
	rpc GetUsers (google.protobuf.Empty) returns (GetUsersReply);
	rpc CreateUser (UserDto) returns (google.protobuf.Empty);
	rpc CheckUserPwd (CheckUserPwdRequest) returns (UserDto);
}

message CheckUserPwdRequest {
	string Name = 1;
	string Pwd = 2;
}

message GetUserByIdRequest {
	int32 Id = 1;
}

message UserDto {
	int32 UserId = 1;
	string UserName = 2;
	string Password = 3;
	int32 Gender = 4;
	string Email = 5;
}

message GetUsersReply {
	repeated UserDto Users = 1;
}
